--- a/about.html
+++ b/about.html
@@ -93,12 +93,9 @@
 											<h3>A generic three column layout</h3>
 										</header>
 										<p>
-											Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quam metus, congue 
-											vel suscipit ut, dignissim non risus. Vestibulum ante est, fringilla nec placerat 
-											eu, vestibulum vitae diam. Integer eget egestas eros. Duis enim erat, mollis quis 
-											lacinia eget, blandit nec ipsum. Donec vitae turpis ipsum. Aliquam mauris libero, 
-											sagittis in eleifend at, mattis imperdiet velit. Donec urna risus, rutrum molestie 
-											varius ac, lacinia sit amet augue. Nam ultrices elementum eros.
+											Delta Upsilon is the world's only international fraternity committed to sharing our
+											values with practice of non-secrecy, non-hazing and founding principles
+											Our mission is to build better men by focusing on our non-secret heritage and Four Founding Principles: The Promotion of Friendship, Diffusion of Liberal Culture, The Development of Character, and The Advancement of Justice.  Our vision is to be the premier men’s fraternity committed to Building Better Men for a global society through service, leadership development, and lifelong personal growth of our diverse membership.
 										</p>
 										<p>
 											Sed faucibus viverra ligula, non varius magna semper vitae. Donec eu justo ut ipsum 
