--- a/board.html
+++ b/board.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Two Column 2 - Halcyonic by HTML5 UP</title>
+		<title>Executive Board</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -57,30 +57,17 @@
 								<!-- Sidebar -->
 									<section>
 										<header>
-											<h2>Magna Phasellus</h2>
+										<h2>Executive Positions</h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Nec sociis natoque</a></li>
-											<li><a href="#">Penatibus et magnis</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
-										</ul>
-									</section>
-									<section>
-										<header>
-											<h2>Ipsum Dolor</h2>
-										</header>
-										<p>
-											Vehicula fermentum ligula at pretium. Suspendisse semper iaculis eros, eu aliquam 
-											iaculis. Phasellus ultrices diam sit amet orci lacinia sed consequat. 							
-										</p>
-										<ul class="link-list">
-											<li><a href="#">Sed dolore viverra</a></li>
-											<li><a href="#">Ligula non varius</a></li>
-											<li><a href="#">Dis parturient montes</a></li>
-											<li><a href="#">Nascetur ridiculus</a></li>
+											<li><a href="pres.html">President</a></li>
+											<li><a href="academic.html">VP-Academic Excellence</a></li>
+											<li><a href="admin.html">VP-Administration</a></li>
+											<li><a href="external.html">VP-External Relations</a></li>
+											<li><a href="finance.html">VP-Finance</a></li>
+											<li><a href="loss.html">VP-Loss Prevention</a>
+											</li><li><a href="edu.html">VP-Membership Education</a></li>
+											<li><a href="recruitment.html">VP-Recruitment</a></li>
 										</ul>
 									</section>
 
