--- a/external.html
+++ b/external.html
@@ -60,14 +60,14 @@
 										<h2>Executive Positions</h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="#">President</a></li>
-											<li><a href="#">VP-Academic Excellence</a></li>
-											<li><a href="#">VP-Administration</a></li>
-											<li><a href="#">VP-External Relations</a></li>
-											<li><a href="#">VP-Finance</a></li>
-											<li><a href="#">VP-Loss Prevention</a>
-											</li><li><a href="#">VP-Membership Education</a></li>
-											<li><a href="#">VP-Recruitment</a></li>
+										<li><a href="pres.html">President</a></li>
+											<li><a href="academic.html">VP-Academic Excellence</a></li>
+											<li><a href="admin.html">VP-Administration</a></li>
+											<li><a href="external.html">VP-External Relations</a></li>
+											<li><a href="finance.html">VP-Finance</a></li>
+											<li><a href="loss.html">VP-Loss Prevention</a>
+											</li><li><a href="edu.html">VP-Membership Education</a></li>
+											<li><a href="recruitment.html">VP-Recruitment</a></li>
 										</ul>
 									</section>
 
