--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 						<div class="12u">
 						
 							<!-- Logo -->
-								<h1><a href="www.deltauoregon.com" id="logo">Delta Upsilon <h6><font size = "3"> Sigma Pi Tau Chapter</font></h6></a></h1>
+								<h1><a href="index.html" id="logo">Delta Upsilon <h6><font size = "3"> Sigma Pi Tau Chapter</font></h6></a></h1>
 							<!-- Nav -->
 								<nav id="nav">
 									<a href="index.html">Homepage</a>
