--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Contact Us</title>
+		<title>About Us</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
