--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							
 								<!-- Banner Copy -->
 									<p>We do something really useful, important, and unique. Learn all about it here ...</p>
-									<a href="#" class="button-big">Go on, click me!</a>
+									<a href="about.html" class="button-big">Learn More!</a>
 
 							</div>
 							<div class="6u">
@@ -77,12 +77,9 @@
 								<!-- Feature #1 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
-										<h2>Welcome to Halcyonic</h2>
+										<h2>Promotion of Friendship</h2>
 										<p>
-											This is <strong>Halcyonic</strong>, a free site template 
-											by <a href="http://n33.co/">AJ</a> for
-											<a href="http://html5up.net">HTML5 UP</a>. It's responsive,
-											built on HTML5 + CSS3, and includes 5 unique page layouts.
+											Define here
 										</p>
 									</section>
 
@@ -92,11 +89,9 @@
 								<!-- Feature #2 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
-										<h2>Responsive You Say?</h2>
+										<h2>Development of Character</h2>
 										<p>
-											Yes! Halcyonic is built on the <a href="http://skeljs.org">skelJS</a>
-											framework, so it has full responsive support for desktop, tablet,
-											and mobile device displays.
+											Define here
 										</p>
 									</section>
 
@@ -106,11 +101,9 @@
 								<!-- Feature #3 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
-										<h2>License Info</h2>
+										<h2>Diffusion of Liberal Culture</h2>
 										<p>
-											Halcyonic is licensed under the <a href="http://html5up.net/license">CCA 3.0</a> license,
-											so use it for personal or commercial use as much as you like (just keep
-											the footer credit intact).
+											Define Here
 										</p>
 									</section>
 
@@ -120,10 +113,9 @@
 								<!-- Feature #4 -->
 									<section>
 										<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
-										<h2>Volutpat etiam aliquam</h2>
+										<h2>Advancement of Justice</h2>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. Suspendisse 
-											eu varius nibh. Suspendisse vitae magna eget odio amet mollis.
+											Define here
 										</p>
 									</section>
 
@@ -143,7 +135,7 @@
 								<!-- Box #1 -->
 									<section>
 										<header>
-											<h2>Who We Are</h2>
+											<h2>*Suggestion*</h2>
 											<h3>A subheading about who we are</h3>
 										</header>
 										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
@@ -160,7 +152,7 @@
 								<!-- Box #2 -->
 									<section>
 										<header>
-											<h2>What We Do</h2>
+											<h2>Suggestion*</h2>
 											<h3>A subheading about what we do</h3>
 										</header>
 										<ul class="check-list">
@@ -178,7 +170,7 @@
 								<!-- Box #3 -->
 									<section>
 										<header>
-											<h2>What People Are Saying</h2>
+											<h2>Twitter feed here?</h2>
 											<h3>And a final subheading about our clients</h3>
 										</header>
 										<ul class="quote-list">
