--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,17 @@
 										</header>
 									
 										<p>
-											Here we will put the name and email addresses of every exec member/chair member so if anyone needs to
-											contact us with anything specific then they can do so here. Possibly put the website and address of our 
-											national chapter etc etc.
-										</p>
+											<table>
+											   <tr>
+											      <td>
+											         A
+											      </td>
+											      <td>
+											         B
+											      </td>
+											   </tr>
+											</table>
+			   							</p>
 										
 									</section>
 
