--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
 											     <h4>VP-External Relations</h4>
 											    </div>
 											
-											    <div id="column2" style="float:left; margin:0;width:50%;">
+											    <div id="column2" style="float:right; margin:0;width:50%;">
 											     <h4>VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
