--- a/contact.html
+++ b/contact.html
@@ -60,14 +60,14 @@
 											<h2>Got any Questions?</h2>
 											<h3>Here's our contact info!</h3>
 										</header>
-										<p><div id="column1" style="float:left; margin:0; width:50%;">
+										<p><div id="column1" style="float:left; width:50%;">
 											     <h4>President</h4>
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
 											    </div>
 											
-											    <div id="column2" style="float:right; margin:0;width:50%;">
+											    <div id="column2" style="float:right; width:50%;">
 											     <h4>VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
