--- a/contact.html
+++ b/contact.html
@@ -61,10 +61,10 @@
 											<h3>Here's our contact info!</h3>
 										</header>
 										<p><div id="column1" style="float:left; width:50%;">
-											     <h4>President</h4>
-											     <h4>VP-Academic Excellence</h4>
-											     <h4>VP-Administration</h4>
-											     <h4>VP-External Relations</h4>
+											     <p>President</p>
+											     <p>VP-Academic Excellence</p>
+											     <p>VP-Administration</p>
+											     <p>VP-External Relations</p>
 											    </div>
 											
 											    <div id="column2" style="float:right; width:50%;">
