--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,9 @@
 											<h2>Got any Questions?</h2>
 											<h3>Here's our contact info!</h3>
 										</header>
-										<p><div id="column1" style="float:left; width:50%;">
+										<p>
+										<div id="container" style="margin:0px auto; width:70%">
+										<div id="column1" style="float:left; width:50%;">
 											     <p>President</p>
 											     <p>VP-Academic Excellence</p>
 											     <p>VP-Administration</p>
