--- a/contact.html
+++ b/contact.html
@@ -61,12 +61,12 @@
 											<h3>Here's our contact info!</h3>
 										</header>
 										<p>
-										<div id="container" style="margin:0px auto; width:70%">
+										<div id="content-wrapper" style="margin:0px auto; width:70%">
 										<div id="column1" style="float:left; width:50%;">
-											     <p>President</p>
-											     <p>VP-Academic Excellence</p>
-											     <p>VP-Administration</p>
-											     <p>VP-External Relations</p>
+											     <h4>President</h4>
+											     <h4>VP-Academic Excellence</h4>
+											     <h4>VP-Administration</h4>
+											     <h4>VP-External Relations</h4>
 											    </div>
 											
 											    <div id="column2" style="float:right; width:50%;">
