--- a/contact.html
+++ b/contact.html
@@ -75,6 +75,7 @@
 											     <h4>VP-Membership Education</h4>
 											     <h4>VP-Recruitment</h4>
 											    </div></p>
+										 </div>
 									</section>
 
 							</div>
