--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,8 @@
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
 											     <h4>VP-Recruitment</h4>
-											    </div></p>
+											    </div>
+											    </div>
 				<div id="content">
 					<div class="container">
 						<div class="row">
