--- a/contact.html
+++ b/contact.html
@@ -59,14 +59,14 @@
 										<header>
 											<h2>Got any Questions?</h2>
 											<h3>Here's our contact info!</h3>
-											<div id="column1" style="float:left;">
+											<div id="column1" style="float:left; width:60%;">
 											     <h4>President</h4>
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
 											    </div>
 											
-											    <div id="column2" style="float:right;">
+											    <div id="column2" style="float:right; width:60%;">
 											     <h4>VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
