--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
 											     <h4>VP-External Relations</h4>
 											    </div>
 											
-											    <div id="column2" style="float:right;>
+											    <div id="column2" style="float:right;">
 											     <h4>VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
