--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
-											     <span><h4>VP-Finance</h4></span>
+											     <h4 align="right">VP-Finance</h4></span>
 											    </div>
 											
 											    <div id="column2" style="float:right;">
