--- a/contact.html
+++ b/contact.html
@@ -65,11 +65,10 @@
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
-											     <h4 align="right">VP-Finance</h4></span>
 											    </div>
 											
-											    <div id="column2" style="float:right;">
-											     <h4>VP-Finance</h4>
+											    <div id="column2">
+											     <h4 align="right">VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
 											     <h4>VP-Recruitment</h4>
