--- a/contact.html
+++ b/contact.html
@@ -61,13 +61,13 @@
 											<h3>Here's our contact info!</h3>
 										</header>
 										<div id="column1">
-											     <h4>President</h4>
+											     <h4>President</h4> <h4 algin="right"> asdf</h4>
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
 											    </div>
 											
-											    <div id="column2">
+										<div id="column2">
 											     <h4 align="right">VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
