--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,8 @@
 											<h3>Here's our contact info!</h3>
 										</header>
 										<div id="column1">
-											     <h4>President</h4> <h4 algin="right"> asdf</h4>
+											     <h4>President</h4>
+											     <h4 algin="right">asdf</h4>
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
