--- a/contact.html
+++ b/contact.html
@@ -60,20 +60,21 @@
 											<h2>Got any Questions?</h2>
 											<h3>Here's our contact info!</h3>
 										</header>
-										<div id="column1">
+										<div id="columns">
+										<div class "left column">
 											     <h4>President</h4>
-											     <h4 algin="right">asdf</h4>
 											     <h4>VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
 											    </div>
 											
-										<div id="column2">
-											     <h4 align="right">VP-Finance</h4>
+										<div class="right column">
+											     <h4>VP-Finance</h4>
 											     <h4>VP-Loss Prevention</h4>
 											     <h4>VP-Membership Education</h4>
 											     <h4>VP-Recruitment</h4>
 											    </div>
+										</div>
 									</section>
 
 							</div>
