--- a/contact.html
+++ b/contact.html
@@ -60,6 +60,13 @@
 											<h2>Got any Questions?</h2>
 											<h3>Here's our contact info!</h3>
 										</header>
+										 <style> #columns .left {
+											        float: left;
+											    }
+											
+											    #columns .right {
+											        float: right;
+											    }</style>
 										<div id="columns">
 										<div class "left column">
 											     <h4>President</h4>
