--- a/contact.html
+++ b/contact.html
@@ -62,10 +62,12 @@
 										</header>
 										<div id="columns">
 										<div class "left column">
-											     <h4>President</h4>
-											     <h4>VP-Academic Excellence</h4>
+										<div style="clear: both">
+											     <h4 style="float: left">President</h4>
+											     <h4 style = "float: right">VP-Academic Excellence</h4>
 											     <h4>VP-Administration</h4>
 											     <h4>VP-External Relations</h4>
+											     </div>
 											    </div>
 											
 										<div class="right column">
