--- a/contact.html
+++ b/contact.html
@@ -64,17 +64,14 @@
 										<div class "left column">
 										<div style="clear: both">
 											     <h4 style="float: left">President</h4>
-											     <h4 style = "float: right">VP-Academic Excellence</h4>
-											     <h4>VP-Administration</h4>
-											     <h4>VP-External Relations</h4>
+											     <h4 style = "float right">VP-Finance</h4>
+											     <h4 style="float: left">VP-Academic Excellence</h4>
+											     <h4 style = "float right">VP-Loss Prevention</h4>
+											     <h4 style="float: left">VP-Administration</h4>
+											     <h4 style = "float right">VP-Membership Education</h4>
+											     <h4 style="float: left">VP-External Relations</h4>
+											     <h4 style = "float right">VP-Recruitment</h4>
 											     </div>
-											    </div>
-											
-										<div class="right column">
-											     <h4>VP-Finance</h4>
-											     <h4>VP-Loss Prevention</h4>
-											     <h4>VP-Membership Education</h4>
-											     <h4>VP-Recruitment</h4>
 											    </div>
 										</div>
 									</section>
