--- a/contact.html
+++ b/contact.html
@@ -64,15 +64,15 @@
 										<div class "left column">
 										<div style="clear: both">
 											     <h4 style="float: left">President</h4>
-											     <h4 style = "float right">VP-Finance</h4>
+											     <h4 style = "float center">VP-Finance</h4>
 											     <h4 style="float: left">VP-Academic Excellence</h4>
-											     <h4 style = "float right">VP-Loss Prevention</h4>
+											     <h4 style = "float center">VP-Loss Prevention</h4>
 											     <h4 style="float: left">VP-Administration</h4>
-											     <h4 style = "float right">VP-Membership Education</h4>
+											     <h4 style = "float center">VP-Membership Education</h4>
 											     <h4 style="float: left">VP-External Relations</h4>
-											     <h4 style = "float right">VP-Recruitment</h4>
+											     <h4 style = "float center">VP-Recruitment</h4>
 											     </div>
-											     <hr />
+											     
 											    </div>
 										</div>
 									</section>
