--- a/contact.html
+++ b/contact.html
@@ -60,21 +60,7 @@
 											<h2>Got any Questions?</h2>
 											<h3>Here's our contact info!</h3>
 										</header>
-										<div id="columns">
-										<div class "left column">
-										<div style="clear: both">
-											     <h4 style="float: left">President</h4>
-											     <h4 style = "float center">VP-Finance</h4>
-											     <h4 style="float: left">VP-Academic Excellence</h4>
-											     <h4 style = "float center">VP-Loss Prevention</h4>
-											     <h4 style="float: left">VP-Administration</h4>
-											     <h4 style = "float center">VP-Membership Education</h4>
-											     <h4 style="float: left">VP-External Relations</h4>
-											     <h4 style = "float center">VP-Recruitment</h4>
-											     </div>
-											     
-											    </div>
-										</div>
+										<p>Matthew gives up on columns lol</p>
 									</section>
 
 							</div>
