--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
 									<section>
 										<header>
 											<h2>Twitter feed here?</h2>
+											<h3>It clearly says this is for our clients lawl</h3>
 											<h3>And a final subheading about our clients</h3>
 										</header>
 										<ul class="quote-list">
