--- a/index.html
+++ b/index.html
@@ -208,8 +208,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="https://twitter.com/inquireunited" <i class="fa fa-twitter-square"></i><span>Twitter</span></a></li>
-							<li><a href="https://www.facebook.com/InquireUnited" class="fa fa-facebook solo"><span>Facebook</span></a></li>
+							<li><a href="https://twitter.com/UnivOregonDU" <i class="fa fa-twitter-square"></i><span>Twitter</span></a></li>
+							<li><a href="https://www.facebook.com/DUOregon" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 							<li><a href="mailto:info@inquireunited.com" class="fa fa-envelope solo"><span>Email</span></a></li>
 						</ul>
 				
