--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Executive Board</title>
+		<title>About Us</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
@@ -75,6 +75,7 @@
 											<h2>Our Chapter</h2>
 											<h3>A History of Brotherhood</h3>
 										</header>
+										<img src="images/about_us.jpg"/>
 										<p>
 											Delta Upsilon is the world's only international fraternity committed to sharing our values with practice of non-secrecy, non-hazing and founding principles Our mission is to build better men by focusing on our non-secret heritage and Four Founding Principles: The Promotion of Friendship, Diffusion of Liberal Culture, The Development of Character, and The Advancement of Justice. Our vision is to be the premier men’s fraternity committed to Building Better Men for a global society through service, leadership development, and lifelong personal growth of our diverse membership.
 										</p>
