--- a/about.html
+++ b/about.html
@@ -60,8 +60,8 @@
 										<h2>History</h2>
 										</header>
 										<ul class="link-list">
-											<li><a href="pres.html">Our Chapter</a></li>
-											<li><a href="academic.html">National History</a></li>
+											<li><a href="about.html">Our Chapter</a></li>
+											<li><a href="national_about.html">National History</a></li>
 
 										</ul>
 									</section>
