--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
 										<h2>Promotion of Friendship</h2>
 										<p>
-											Define here
+											The Promotion of Friendship exemplifies the everyday respect, understanding, and concern that are expressed through brotherly love. Friendship encompasses justice, kindness, and compassion. It is a difficult term to describe but an easy concept to experience here at Delta Upsilon. It is the uniting force in our brotherhood.
 										</p>
 									</section>
 
@@ -93,7 +93,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
 										<h2>Development of Character</h2>
 										<p>
-											Define here
+											The Development of Character means that each man should strive to develop his full potential. It includes the concepts of integrity, responsibility, and compassion for our fellow man. It is the aspiration of the men of Delta Upsilon to constantly improve themselves and reach their potentials. It is the goal of the fraternity to help each individual mature into a responsible person, and an asset to society.	
 										</p>
 									</section>
 
@@ -105,7 +105,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
 										<h2>Diffusion of Liberal Culture</h2>
 										<p>
-											Define Here
+											The Diffusion of Liberal Culture is the development of a social conscience. It is the responsibility of DU men to take advantage of the many opportunities before them, to help better society. The idea is to create educated, worldly, humane, and compassionate men.
 										</p>
 									</section>
 
@@ -117,7 +117,7 @@
 										<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
 										<h2>Advancement of Justice</h2>
 										<p>
-											Define here
+											The Advancement of Justice means each individual of Delta Upsilon should be just in all his dealings with everyone. Justice implies using good judgment, and making well informed decisions. Enlightened judgment requires knowledge, careful consideration, and a firm determination. Justice means no special favor or privilege; no tolerance for prejudice; no deceit nor dishonesty.
 										</p>
 									</section>
 
