added twitter feed hopefully

--- a/index.html
+++ b/index.html
@@ -176,23 +176,11 @@
 											<h3>It clearly says this is for our clients lawl</h3>
 											<h3>And a final subheading about our clients</h3>
 										</header>
-										<ul class="quote-list">
-											<li>
-												<img src="images/pic06.jpg" alt="" />
-												<p>"Neque nisidapibus mattis"</p>
-												<span>Jane Doe, CEO of UntitledCorp</span>
-											</li>
-											<li>
-												<img src="images/pic07.jpg" alt="" />
-												<p>"Lorem ipsum consequat!"</p>
-												<span>John Doe, President of FakeBiz</span>
-											</li>
-											<li>
-												<img src="images/pic08.jpg" alt="" />
-												<p>"Magna veroeros amet tempus"</p>
-												<span>Mary Smith, CFO of UntitledBiz</span>
-											</li>
-										</ul>
+										<a class="twitter-timeline" href="https://twitter.com/UnivOregonDU" data-widget-id="483448214767411200">Tweets by @UnivOregonDU</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+
+										
 									</section>
 
 							</div>
@@ -209,12 +197,13 @@
 						<div class="bottom">
 
 					<!-- Social Icons -->
+					<div class="row">
 						<ul class="icons">
 							<li><a href="https://twitter.com/UnivOregonDU" <i class="fa fa-twitter-square"></i><span>Twitter</span></a></li>
 							<li><a href="https://www.facebook.com/DUOregon" class="fa fa-facebook solo"><span>Facebook</span></a></li>
 							<li><a href="mailto:info@inquireunited.com" class="fa fa-envelope solo"><span>Email</span></a></li>
 						</ul>
-				
+					</div>
 				</div>
 			
 							<!-- Links -->
