Add breznic's page

--- a/edu.html
+++ b/edu.html
@@ -81,10 +81,19 @@
 										<header>
 											<h2>Vice President of Membership Education</h2>
 											<h3>Brandon Brezic</h3>
+											
 										</header>
-										<p>
-											Teaching the DU way (pic)
-										</p>
+											<div>
+   												<p style="float: left; padding-right: 50px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Breznic.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The Vice President-Membership Education serves on the Executive Council and assumes the role of the President in the event that he is unable to perform his duties. He is responsible for all educational programming and activities which promote the Fraternity's purposes and ideals. </p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>503-422-7233</li>
+												<li>b.brezic@gmail.com</li>
+											</ul>
 			
 									</section>
 
