--- a/index.html
+++ b/index.html
@@ -172,9 +172,8 @@
 								<!-- Box #3 -->
 									<section>
 										<header>
-											<h2>Twitter feed here?</h2>
-											<h3>It clearly says this is for our clients lawl</h3>
-											<h3>And a final subheading about our clients</h3>
+											<h2>Twitter Feed</h2>
+											<h3>Follow Us!</h3>
 										</header>
 										<a class="twitter-timeline" href="https://twitter.com/UnivOregonDU" data-widget-id="483448214767411200">Tweets by @UnivOregonDU</a>
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
