--- a/recruit.html
+++ b/recruit.html
@@ -62,9 +62,7 @@
 											<h2>Intersted in joining Delta Upsilon?</h2>
 											<h3>Send us your information!</h3>
 										</header>
-										<p>
-										We would have a form here where they can submit their info to our email and log them into a PNM list.
-										</p>
+										<iframe src="https://docs.google.com/spreadsheet/embeddedform?formkey=dFZ4YTJkbm44ZTJpbDVxY0tPa3pEREE6MA" width="760" height="1017" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 										
 									</section>
 
