--- a/pres.html
+++ b/pres.html
@@ -82,9 +82,17 @@
 											<h2>President</h2>
 											<h3>Grayson McCormick</h3>
 										</header>
-										<p>
-											All about El Presidente (with a picture of you somewhere in here)
-										</p>
+										<div>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The Vice President-Membership Education serves on the Executive Council and assumes the role of the President in the event that he is unable to perform his duties. He is responsible for all educational programming and activities which promote the Fraternity's purposes and ideals. </p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>503-422-7233</li>
+												<li>b.brezic@gmail.com</li>
+											</ul>
 									
 									</section>
 
