--- a/recruit.html
+++ b/recruit.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>One Column - Halcyonic by HTML5 UP</title>
+		<title>Recruitment</title>
 		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
