--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 							<div class="6u">
 
 								<!-- Banner Image -->
-									<a href="#" class="bordered-feature-image"><img src="images/banner.jpg" alt="" /></a>
+									<a href="#" class="bordered-feature-image"><img src="images/DUbanner.jpg" alt="" /></a>
 
 							</div>
 						</div>
@@ -140,11 +140,9 @@
 											<h2>*Suggestion*</h2>
 											<h3>A subheading about who we are</h3>
 										</header>
-										<a href="#" class="feature-image"><img src="images/pic05.jpg" alt="" /></a>
+										<a href="#" class="feature-image"><img src="images/work.jpg" alt="" /></a>
 										<p>
-											Duis neque nisi, dapibus sed mattis quis, rutrum accumsan sed. 
-											Suspendisse eu varius nibh. Suspendisse vitae magna eget odio amet mollis 
-											justo facilisis quis. Sed sagittis mauris amet tellus gravida lorem ipsum.
+											Delta Upsilon is a group of men devoted to brotherhood and the development of character.  As our motto says, we are commited to building each other up through service and brotherhood.  We belive that we do not need any sort of hazing or secrecy to achieve this type of brotherhood.
 										</p>
 									</section>
 
@@ -158,11 +156,11 @@
 											<h3>A subheading about what we do</h3>
 										</header>
 										<ul class="check-list">
-											<li>Sed mattis quis rutrum accum</li>
-											<li>Eu varius nibh suspendisse lorem</li>
-											<li>Magna eget odio amet mollis justo</li>
-											<li>Facilisis quis sagittis mauris</li>
-											<li>Amet tellus gravida lorem ipsum</li>
+											<li>Volunteer in the Eugene/Springfield community</li>
+											<li>Attend the DU Leadship Institute</li>
+											<li>GSI volunteer opportunity is Jamaica</li>
+											<li>A commited group to the UO greek system</li>
+											<li>Regular retreats witht the brothers</li>
 										</ul>
 									</section>
 
