--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 								<!-- Feature #1 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/brotherhood.jpg" alt="" /></a>
 										<h2>Promotion of Friendship</h2>
 										<p>
 											The Promotion of Friendship exemplifies the everyday respect, understanding, and concern that are expressed through brotherly love. Friendship encompasses justice, kindness, and compassion. It is a difficult term to describe but an easy concept to experience here at Delta Upsilon. It is the uniting force in our brotherhood.
@@ -90,7 +90,7 @@
 
 								<!-- Feature #2 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/character.jpg" alt="" /></a>
 										<h2>Development of Character</h2>
 										<p>
 											The Development of Character means that each man should strive to develop his full potential. It includes the concepts of integrity, responsibility, and compassion for our fellow man. It is the aspiration of the men of Delta Upsilon to constantly improve themselves and reach their potentials. It is the goal of the fraternity to help each individual mature into a responsible person, and an asset to society.	
@@ -102,7 +102,7 @@
 
 								<!-- Feature #3 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/liberal.jpg" alt="" /></a>
 										<h2>Diffusion of Liberal Culture</h2>
 										<p>
 											The Diffusion of Liberal Culture is the development of a social conscience. It is the responsibility of DU men to take advantage of the many opportunities before them, to help better society. The idea is to create educated, worldly, humane, and compassionate men.
@@ -114,7 +114,7 @@
 
 								<!-- Feature #4 -->
 									<section>
-										<a href="#" class="bordered-feature-image"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="bordered-feature-image"><img src="images/justice.jpg" alt="" /></a>
 										<h2>Advancement of Justice</h2>
 										<p>
 											The Advancement of Justice means each individual of Delta Upsilon should be just in all his dealings with everyone. Justice implies using good judgment, and making well informed decisions. Enlightened judgment requires knowledge, careful consideration, and a firm determination. Justice means no special favor or privilege; no tolerance for prejudice; no deceit nor dishonesty.
@@ -137,8 +137,8 @@
 								<!-- Box #1 -->
 									<section>
 										<header>
-											<h2>*Suggestion*</h2>
-											<h3>A subheading about who we are</h3>
+											<h2>Who We Are</h2>
+											
 										</header>
 										<a href="#" class="feature-image"><img src="images/work.jpg" alt="" /></a>
 										<p>
@@ -152,15 +152,15 @@
 								<!-- Box #2 -->
 									<section>
 										<header>
-											<h2>Suggestion*</h2>
-											<h3>A subheading about what we do</h3>
+											<h2>What We Do</h2>
+										
 										</header>
 										<ul class="check-list">
 											<li>Volunteer in the Eugene/Springfield community</li>
 											<li>Attend the DU Leadship Institute</li>
-											<li>GSI volunteer opportunity is Jamaica</li>
+											<li>GSI volunteer opportunity in Jamaica</li>
 											<li>A commited group to the UO greek system</li>
-											<li>Regular retreats witht the brothers</li>
+											<li>Regular retreats with the brothers</li>
 										</ul>
 									</section>
 
