--- a/recruit.html
+++ b/recruit.html
@@ -75,6 +75,13 @@
 		<!-- Footer -->
 			<div id="footer-wrapper">
 				<footer id="footer" class="container">
+					<!-- Social Icons -->
+
+					<ul class="icons">
+							<li style="text-align: center"><a style="padding: 10px 10px 10px 10px" href="https://twitter.com/UnivOregonDU" <i class="fa fa-twitter-square"></i><span> Twitter </span></a><a style="padding: 10px 10px 10px 10px" href="https://www.facebook.com/DUOregon" class="fa fa-facebook solo"><span> Facebook </span></a><a style="padding: 10px 10px 10px 10px" href="mailto:info@inquireunited.com" class="fa fa-envelope solo"><span> Email</span></a></li>
+
+
+						</ul>
 					<div class="row">
 						<div class="8u">
 						
