--- a/about.html
+++ b/about.html
@@ -93,6 +93,15 @@
 		<!-- Footer -->
 			<div id="footer-wrapper">
 				<footer id="footer" class="container">
+					<!-- Social Icons -->
+
+					<ul class="icons">
+							<li style="text-align: center"><a style="padding: 10px 10px 10px 10px" href="https://twitter.com/UnivOregonDU" <i class="fa fa-twitter-square"></i><span> Twitter </span></a><a style="padding: 10px 10px 10px 10px" href="https://www.facebook.com/DUOregon" class="fa fa-facebook solo"><span> Facebook </span></a><a style="padding: 10px 10px 10px 10px" href="mailto:info@inquireunited.com" class="fa fa-envelope solo"><span> Email</span></a></li>
+
+
+						</ul>
+
+				</div>
 					<div class="row">
 						<div class="8u">
 
@@ -109,6 +118,7 @@
 		<!-- Copyright -->
 			<div id="copyright">
 				&copy; Untitled. All rights reserved. | Design: <a href="http://html5up.net">HTML5 UP</a> | Images: <a href="http://fotogrph.com">fotogrph</a>
+				<i class="fa fa-twitter-square"></i> fa-twitter-square
 			</div>
 
 	</body>
