--- a/pres.html
+++ b/pres.html
@@ -96,13 +96,17 @@
 										<div>
    												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
    												<div class="divider"></div>
-    											<p>The Vice President-Membership Education serves on the Executive Council and assumes the role of the President in the event that he is unable to perform his duties. He is responsible for all educational programming and activities which promote the Fraternity's purposes and ideals. </p>
+    											<p>The chapter president will serve as the chief executive officer 
+												and chief operating officer of the chapter. He shall be the 
+												head of the chapter’s organizational structure. He will be the 
+												liaison between the chapter and the university, community, 
+												alumni, and International Fraternity</p>
 											</div>
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>503-422-7233</li>
-												<li>b.brezic@gmail.com</li>
+												<li>858-449-0678</li>
+												<li>grayson14@gmail.com</li>
 											</ul>
 									
 									</section>
