--- a/admin.html
+++ b/admin.html
@@ -93,9 +93,21 @@
 											<h2>Vice President of Administration</h2>
 											<h3>Mitchell Parks</h3>
 										</header>
-										<p>
-											Workin Hard (Pic)
-										</p>
+										<div>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The vice president administration on the executive council, 
+												takes minutes of all official meetings of the chapter, and 
+												distributes them to the undergraduates, alumni, and 
+												International Fraternity. He keeps all records of the chapter 
+												and maintains relations with the International Fraternity</p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>858-449-0678</li>
+												<li>grayson14@gmail.com</li>
+											</ul>
 									</section>
 
 							</div>
