--- a/loss.html
+++ b/loss.html
@@ -93,9 +93,24 @@
 											<h2>Vice President of Loss Prevention</h2>
 											<h3>Fintan Doyle</h3>
 										</header>
-										<p>
-											Making sure you don't mess up (pic)
-										</p>
+										<div>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The vice president risk management serves on the executive 
+												council and works closely with them to help prevent and 
+												reduce risk within the chapter. He educates the entire 
+												membership on Fraternity policy and loss prevention in 
+												general. He provides regular reports to the chapter and to 
+												the Fraternity concerning risk reduction and ensures that 
+												the chapter operates under guidelines established by federal, 
+												state, local, university, and Fraternity officials.</p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>858-449-0678</li>
+												<li>grayson14@gmail.com</li>
+											</ul>
 					
 									</section>
 
