--- a/recruitment.html
+++ b/recruitment.html
@@ -91,9 +91,18 @@
 											<h2>Vice President of Recruitment</h2>
 											<h3>Hayden Rahn</h3>
 										</header>
-										<p>
-											Recruiting new associate members (pic)
-										</p>
+										<div>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The vice president recruitment on the executive council and 
+												coordinate the chapter’s recruitment effort.</p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>858-449-0678</li>
+												<li>grayson14@gmail.com</li>
+											</ul>
 										
 									</section>
 
