--- a/academic.html
+++ b/academic.html
@@ -93,9 +93,22 @@
 											<h2>Vice President of Academic Excellence</h2>
 											<h3>Kory Christoffersen</h3>
 										</header>
-										<p>
-										GET YO GRADES UP (Pic of kory somewhere)
-										</p>
+										<div>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The vice president academic excellence serves on the 
+												executive council and is responsible for developing and 
+												implementing the chapter’s academic assistance program. He 
+												educates the entire membership on ways to improve their 
+												study skills and helps to cultivate an attitude that academics 
+												are important.</p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>858-449-0678</li>
+												<li>grayson14@gmail.com</li>
+											</ul>
 									
 									</section>
 
