--- a/finance.html
+++ b/finance.html
@@ -93,9 +93,21 @@
 											<h2>Vice President of Finance</h2>
 											<h3>Kye Crair</h3>
 										</header>
-										<p>
-											Money talks (pic)
-										</p>
+										<div>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<div class="divider"></div>
+    											<p>The vice president finances serves on the executive council 
+												and is directly responsible for the receipt, care, and 
+												disbursement of all chapter funds. He must work with the 
+												undergraduates, alumni officers, and International Fraternity 
+												to secure a sound and fiscally prudent future for the chapter.</p>
+											</div>
+										
+											<ul>
+												<li><h2>Contact</h2></li>
+												<li>858-449-0678</li>
+												<li>grayson14@gmail.com</li>
+											</ul>
 									
 									</section>
 
