--- a/finance.html
+++ b/finance.html
@@ -91,10 +91,10 @@
 									<section>
 										<header>
 											<h2>Vice President of Finance</h2>
-											<h3>Kye Crair</h3>
+											<h3>Kyle Crair</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/kc.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president finances serves on the executive council 
 												and is directly responsible for the receipt, care, and 
@@ -105,8 +105,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>858-449-0678</li>
-												<li>grayson14@gmail.com</li>
+												<li>310-570-3954</li>
+												<li>kylecrair@gmail.com</li>
 											</ul>
 									
 									</section>
