--- a/recruitment.html
+++ b/recruitment.html
@@ -92,7 +92,7 @@
 											<h3>Hayden Rahn</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Rahn.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president recruitment on the executive council and 
 												coordinate the chapter’s recruitment effort.</p>
@@ -100,8 +100,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>858-449-0678</li>
-												<li>grayson14@gmail.com</li>
+												<li>951-553-9285</li>
+												<li>hrahn@uoregon.edu</li>
 											</ul>
 										
 									</section>
