--- a/external.html
+++ b/external.html
@@ -94,7 +94,7 @@
 											<h3>Another generic two column layout</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Long.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president external relations serves on the executive 
 												council and plans and directs the chapter’s efforts in 
@@ -106,8 +106,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>858-449-0678</li>
-												<li>grayson14@gmail.com</li>
+												<li>760-887-78658</li>
+												<li>Mlong3@uoregon.edu</li>
 											</ul>
 									</section>
 
