--- a/board.html
+++ b/board.html
@@ -91,11 +91,10 @@
 									<section>
 										<header>
 											<h2>Executive Board</h2>
-											<h3>*Purpose*</h3>
+											<h3></h3>
 										</header>
 										<p>
-											Most likely going to list every exec position and their responsibility.
-											Each exec member will have their personal profiles on the left hand side.
+											The executive board runs the fraternity.  Each Vice President has a group of chairs to help them do their job.  To learn more click a posistion on the left.
 										</p>
 										
 									</section>
