--- a/external.html
+++ b/external.html
@@ -44,7 +44,7 @@
 						<div class="12u">
 
 							<!-- Logo -->
-								<h1><a href="index.html" id="logo">Delta Upsilon <h6><font size = "3"> Sigma Pi Tau Chapter</font></h6></a></h1>
+								<h1><a href="index.html" id="logo">Delta Upsilon <h6><font size = "3">Oregon Chapter</font></h6></a></h1>
 							<!-- Nav -->
 									<nav id="nav">
 									<a href="index.html">Homepage</a>
@@ -90,8 +90,8 @@
 								<!-- Main Content -->
 									<section>
 										<header>
-											<h2>Two Column #2</h2>
-											<h3>Another generic two column layout</h3>
+											<h2>VP of External Relations</h2>
+											<h3>Michael Long</h3>
 										</header>
 										<div>
    												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Long.jpg" alt="" /></a></p>
