--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						<div class="12u">
 
 							<!-- Logo -->
-								<h1><a href="index.html" id="logo">Delta Upsilon <h2><font size = "3"> Sigma Pi Tau Chapter</font></h2></a></h1>
+								<h1><a href="index.html" id="logo">Delta Upsilon <h2><font size = "3">Oregon Chapter</font></h2></a></h1>
 							<!-- Nav -->
 								<nav id="nav">
 									<a href="index.html">Homepage</a>
