The Wizner Update

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 										</header>
 										<a href="#" class="bordered-feature-image"><img src="images/about_us.jpg" alt="" /></a>
 										<p>
-											Delta Upsilon is the world's only international fraternity committed to sharing our values with practice of non-secrecy, non-hazing and founding principles Our mission is to build better men by focusing on our non-secret heritage and Four Founding Principles: The Promotion of Friendship, Diffusion of Liberal Culture, The Development of Character, and The Advancement of Justice. Our vision is to be the premier men’s fraternity committed to Building Better Men for a global society through service, leadership development, and lifelong personal growth of our diverse membership.
+											Delta Upsilon is the world's only international fraternity committed to sharing our values through practice of non-secrecy and non-hazing. Our mission is to build better men by focusing on our non-secret heritage and our Four Founding Principles: The Promotion of Friendship, The Diffusion of Liberal Culture, The Development of Character and The Advancement of Justice. Our vision is to be the premier men’s fraternity committed to Building Better Men for a global society through service, leadership development, and the lifelong personal growth of our diverse membership.
 										</p>
 
 									</section>
