--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 							<div class="6u">
 
 								<!-- Banner Copy -->
-									<p>We do something really useful, important, and unique. Learn all about it here ...</p>
+									<p>We do something useful, important, and unique. Learn all about it here ...</p>
 									<a href="about.html" class="button-big">Learn More!</a>
 
 							</div>
