--- a/loss.html
+++ b/loss.html
@@ -74,13 +74,13 @@
 										</header>
 										<ul class="link-list">
 											<li><a href="pres.html">President</a></li>
-											<li><a href="academic.html">VP-Academic Excellence</a></li>
-											<li><a href="admin.html">VP-Administration</a></li>
-											<li><a href="external.html">VP-External Relations</a></li>
-											<li><a href="finance.html">VP-Finance</a></li>
-											<li><a href="loss.html">VP-Loss Prevention</a>
-											</li><li><a href="edu.html">VP-Membership Education</a></li>
-											<li><a href="recruitment.html">VP-Recruitment</a></li>
+											<li><a href="academic.html">VP of Academic Excellence</a></li>
+											<li><a href="admin.html">VP of Administration</a></li>
+											<li><a href="external.html">VP of External Relations</a></li>
+											<li><a href="finance.html">VP of Finance</a></li>
+											<li><a href="loss.html">VP of Loss Prevention</a>
+											</li><li><a href="edu.html">VP of Membership Education</a></li>
+											<li><a href="recruitment.html">VP of Recruitment</a></li>
 										</ul>
 									</section>
 
@@ -94,7 +94,7 @@
 											<h3>Fintan Doyle</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/fintan.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president risk management serves on the executive 
 												council and works closely with them to help prevent and 
