--- a/board.html
+++ b/board.html
@@ -74,13 +74,13 @@
 										</header>
 										<ul class="link-list">
 											<li><a href="pres.html">President</a></li>
-											<li><a href="academic.html">VP-Academic Excellence</a></li>
-											<li><a href="admin.html">VP-Administration</a></li>
-											<li><a href="external.html">VP-External Relations</a></li>
-											<li><a href="finance.html">VP-Finance</a></li>
-											<li><a href="loss.html">VP-Loss Prevention</a>
-											</li><li><a href="edu.html">VP-Membership Education</a></li>
-											<li><a href="recruitment.html">VP-Recruitment</a></li>
+											<li><a href="academic.html">VP of Academic Excellence</a></li>
+											<li><a href="admin.html">VP of Administration</a></li>
+											<li><a href="external.html">VP of External Relations</a></li>
+											<li><a href="finance.html">VP of Finance</a></li>
+											<li><a href="loss.html">VP of Loss Prevention</a>
+											</li><li><a href="edu.html">VP of Membership Education</a></li>
+											<li><a href="recruitment.html">VP of Recruitment</a></li>
 										</ul>
 									</section>
 
@@ -94,7 +94,7 @@
 											<h3></h3>
 										</header>
 										<p>
-											The executive board runs the fraternity.  Each Vice President has a group of chairs to help them do their job.  To learn more click a posistion on the left.
+											The executive board runs the fraternity.  "Each Vice President has a group of chairs to help him do his job.  To learn more click a posistion on the left.
 										</p>
 										
 									</section>
