--- a/admin.html
+++ b/admin.html
@@ -94,7 +94,7 @@
 											<h3>Mitchell Parks</h3>
 										</header>
 										<div>
-   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Grayson.jpg" alt="" /></a></p>
+   												<p style="float: left; padding-right: 20px;"><a href="#" class="bordered-feature-image"><img class="idpic" src="images/Mitch.jpg" alt="" /></a></p>
    												<div class="divider"></div>
     											<p>The vice president administration on the executive council, 
 												takes minutes of all official meetings of the chapter, and 
@@ -105,8 +105,8 @@
 										
 											<ul>
 												<li><h2>Contact</h2></li>
-												<li>858-449-0678</li>
-												<li>grayson14@gmail.com</li>
+												<li>541-913-4994</li>
+												<li>mparks@uoregon.edu</li>
 											</ul>
 									</section>
 
