fixed contact page

--- a/contact.html
+++ b/contact.html
@@ -75,7 +75,7 @@
 											<h3>Here's our contact info!</h3>
 										</header>
 										<div align="center">
-										<div align="center" style="display: inline-block; padding: 20px 20px 20px 20px">
+										<div align="center" style="display: inline-block; padding: 20px 20px 20px 20px; float: left">
 											<h2>President</h2>
 											<h3>Grayson McCormick</h3>
 											<h5>858-449-0678</h5>
@@ -87,7 +87,7 @@
 											<h5>951-553-9285</h5>
 											<h5>hrahn@uoregon.edu</h5>
 										</div>
-										<div align="center" style="display: inline-block; padding: 20px 20px 20px 20px">
+										<div align="center" style="display: inline-block; padding: 20px 20px 20px 20px; float: right">
 											<h2>VP of External Relations</h2>
 											<h3>Michael Long</h3>
 											<h5>760-887-7865</h5>
